--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "liveServer.settings.port": 5502
+    "files.associations": {
+        "*.pcss": "postcss",
+        "*.css": "postcss"
+    },
+    "emmet.includeLanguages": {
+        "postcss": "css",
+        "javascript": "html",
+    },
+    "emmet.syntaxProfiles": {
+        "postcss": "css"
+    },
 }
